mobile[#1626] Fix input styles on iOS

--- a/src/client/ui/templates/login/styles.less
+++ b/src/client/ui/templates/login/styles.less
@@ -56,7 +56,8 @@
 		input,
 		.textbox,
 		input:-webkit-autofill {
-			box-shadow: 0 0 0px 1000px darken(@gray, 15%) inset;
+			-webkit-appearance: none;
+			box-shadow: 0 0 0px 20px darken(@gray, 15%) inset;
 			color: @white;
 			-webkit-text-fill-color: @white;
 			margin-bottom: @boxPadding;
@@ -65,7 +66,7 @@
 		/* We duplicate this for firefox which doesn't like the webkit selector */
 		input,
 		.textbox {
-			box-shadow: 0 0 0px 1000px darken(@gray, 15%) inset;
+			box-shadow: 0 0 0px 20px darken(@gray, 15%) inset;
 			color: @white;
 			-webkit-text-fill-color: @white;
 			margin-bottom: @boxPadding;
